Horizontal scroll fix
Added html {
overflow-x: hidden;
width: 100%;
}

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,8 @@ footer
 html{
     font-family: 'ZCOOL XiaoWei', serif;
     font-size: 14px;
+    overflow-x: hidden;
+    width: 100%;
 }
 body {
     width: 100vw;
